--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:4000
+REACT_APP_API_URL= process.env.NODE_ENV === 'development' ? 'https://localhost:4000' : 
+'https://arena-sport-center-server-qf9shggvh-dannylezs-projects.vercel.app/'
