--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
