navlink and forms

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-REACT_APP_API_URL=NODE_ENV === 'development'
-    ? 'http://localhost:4000'
-    : 'https://arena-sport-center-server-git-main-dannylezs-projects.vercel.app'
+REACT_APP_API_URL=http://localhost:4000
